--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,7 +57,8 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/img_breakfast"
         android:layout_width="60dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
+        android:padding="5dp"
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/img_lunch"
@@ -72,7 +73,8 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/img_lunch"
         android:layout_width="60dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
+        android:padding="5dp"
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="@+id/img_breakfast"
         app:layout_constraintEnd_toStartOf="@+id/img_dinner"
@@ -85,7 +87,8 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/img_dinner"
         android:layout_width="60dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
+        android:padding="5dp"
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="@+id/img_lunch"
         app:layout_constraintEnd_toStartOf="@+id/shapeableImageView"
@@ -98,7 +101,8 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/shapeableImageView"
         android:layout_width="60dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
+        android:padding="5dp"
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="@+id/img_dinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,7 +121,6 @@
         android:text="Take a Photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.524"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline5"
         app:layout_constraintVertical_bias="0.702" />
