--- a/app/src/main/res/layout/fragment_photo_list.xml
+++ b/app/src/main/res/layout/fragment_photo_list.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.views.PhotoListFragment">
-
-    <androidx.recyclerview.widget.RecyclerView
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/fragment_photo_list_item" />
-</FrameLayout>
+        tools:context=".ui.views.PhotoListFragment">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/fragment_photo_list_item" />
+    </FrameLayout>
+</layout>
